# rosbrachiograph

./: CMakeLists.txt  package.xml  setup.py
Arduino/ServoControlI2C/: ServoControlI2C.ino
Arduino/rosserial_Servo_Example/: rosserial_Servo_Example.ino
images/: africa.json
launch/: head.launch  rosbrachiograph.launch
msg/: PenPosition.msg  Servo.msg  ServoPosition.msg
nodes/: brachiograph_control
scripts/: bg.py
src/: brachiograph  brachiograph.py  brachiograph_control  head_motor_control.py
src/rosbrachiograph/: __init__.py  brachiograph.py
